# dclaw-sales

./: .env.example  AGENTS.md  PATCHES.md  PLAN-v1.2.md  PRODUCT-SPEC.md  README.md  REVISED-PRD.md  docker-compose.yml  plan_v1.3.md
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e263dba2c9bd_initial_models.py
backend/app/api/: main.py
backend/app/api/routes/: health.py
backend/app/api/v1/: dashboard.py  lead_conversion.py  leads.py  opportunities.py  quotes.py  sales.py
backend/app/core/: config.py
backend/app/models/: __init__.py  lead.py  opportunity.py  quote.py
backend/app/repositories/: lead_repo.py  opportunity_repo.py  quote_repo.py
backend/app/schemas/: lead.py  opportunity.py  quote.py
backend/tests/: conftest.py  test_dashboard.py  test_leads.py  test_opportunities.py  test_quotes.py
docs/: README.md  meta.json
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: index.md  use-cases.md
docs/reference/: api.md  architecture.md  index.md  stack.md
docs/releases/: changelog.md  index.md  roadmap.md
docs/troubleshooting/: common-issues.md  faq.md  index.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: sidebar.tsx
frontend/src/lib/: api.ts
helm/dclaw-sales/: Chart.yaml  values.yaml
knowledge/: agent-rules.md  architecture.md  entities.md  frontend-routes.md  index.md  meta.json  progress-log.md
(+14 files in other folders)
